src/test/groovy/org/fundacionjala/gradle/plugins/enforce/interceptor/resources/objects/ObjectField.object
<CustomObject>
    <description>A single record in the result of Legislation or Legislators resulting from a successful query.</description>
    <fields>
        <fullName>API_Name__c</fullName>
        <description>The name of the ’API’ used
        for this search “result”
        &quot;this no bug&quot;</description>
        <inlineHelpText>The name of the API used for this search result
        on inlineHelpText
        </inlineHelpText>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Full name of the search result</description>
        <inlineHelpText>Full name of the search result on inlineHelpText</inlineHelpText>
        <label>Full Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retrieved_At__c</fullName>
        <description>Datetime this search result was retrieved</description>
        <inlineHelpText>Datetime this search result was retrieved
        on inlineHelpText</inlineHelpText>
        <label>Retrieved At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Saved_Search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Search used to retrieve this result, if applicable</description>
        <inlineHelpText>Search used to retrieve this result, if applicable
        on inlineHelpText</inlineHelpText>
        <label>Saved Search</label>
        <referenceTo>FGW_Saved_Search__c</referenceTo>
        <relationshipLabel>Search Results</relationshipLabel>
        <relationshipName>Search_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field indicating if this search result is a Contact-based search result or legislation-based</description>
        <inlineHelpText>System field indicating if this search result is a Contact-based search result or legislation-based on inlineHelpText</inlineHelpText>
        <label>isContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Units_Sold1__c</fullName>
        <description>Go -> “here” </description>
        <label>Units Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Sold2__c</fullName>
        <inlineHelpText>Go -> “Now” </inlineHelpText>
        <label>Units Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Search Result</label>
    <nameField>
        <label>Search Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>